Commit to fix joomla <tr> text size issue (too small!!) just adjusting to work again.

--- a/css/joomla.css
+++ b/css/joomla.css
@@ -33,7 +33,7 @@ img {
   border: 0;
 }
 /* Added in CiviCRM 2.0 to alleviate tiny font issues. */
-#crm-container #content tr, #crm-container #content tr td {
+#crm-container tr, #crm-container tr td {
   font-size: 1em;
 }
 
